--- a/apps/client/src/app/Views/users/users-view.component.html
+++ b/apps/client/src/app/Views/users/users-view.component.html
@@ -2,13 +2,24 @@
     <p-toast></p-toast>
     <p-confirmDialog></p-confirmDialog>
 
-    <div class="flex justify-content-between align-items-center mb-3">
+    <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center mb-3 gap-2">
         <h2 class="m-0 text-900">Users</h2>
-        <p-button label="New User" icon="pi pi-plus" (onClick)="createNewUser()"
-            styleClass="p-button-primary"></p-button>
+        <div class="flex gap-2 align-items-center">
+            <span class="p-input-icon-left">
+                <p-iconField iconPosition="left">
+                    <p-inputIcon styleClass="pi pi-search" />
+                    <input type="text" pInputText placeholder="Search..."
+                        (input)="dt.filterGlobal($any($event.target).value, 'contains')" />
+                </p-iconField>
+            </span>
+            <p-button icon="pi pi-refresh" (onClick)="loadUsers()" styleClass="p-button-outlined p-button-secondary"
+                pTooltip="Refresh"></p-button>
+            <p-button label="New User" icon="pi pi-plus" (onClick)="createNewUser()" styleClass="p-button-primary"
+                pTooltip="New User"></p-button>
+        </div>
     </div>
 
-    <p-table [value]="users()" [tableStyle]="{ 'min-width': '50rem' }">
+    <p-table #dt [value]="users()" [tableStyle]="{ 'min-width': '50rem' }" [globalFilterFields]="['username', 'name']">
         <ng-template pTemplate="header">
             <tr>
                 <th>Username</th>
@@ -25,10 +36,10 @@
                     <p-tag [value]="getRoleName(user.role)" [severity]="getRoleSeverity(user.role)"></p-tag>
                 </td>
                 <td>
-                    <p-button icon="pi pi-pencil" styleClass="p-button-text p-button-warning"
-                        (onClick)="editUser(user)"></p-button>
-                    <p-button icon="pi pi-trash" styleClass="p-button-text p-button-danger"
-                        (onClick)="deleteUser(user)"></p-button>
+                    <p-button icon="pi pi-pencil" styleClass="p-button-text p-button-warning" (onClick)="editUser(user)"
+                        pTooltip="Edit"></p-button>
+                    <p-button icon="pi pi-trash" styleClass="p-button-text p-button-danger" (onClick)="deleteUser(user)"
+                        pTooltip="Delete"></p-button>
                 </td>
             </tr>
         </ng-template>
