--- a/apps/client/src/styles.scss
+++ b/apps/client/src/styles.scss
@@ -1,10 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 
 body {
     margin: 0;
-    font-family: var(--font-family);
+    font-family: Arial, Helvetica, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: var(--surface-b);
