updated API fixed statistics types

--- a/apps/client/src/app/Views/statistics/statistics-view.component.html
+++ b/apps/client/src/app/Views/statistics/statistics-view.component.html
@@ -80,7 +80,7 @@
         </ng-template>
         <ng-template pTemplate="body" let-item>
           <tr>
-            <td>{{ item.date | date:'dd/MM/yyyy HH:mm' }}</td>
+            <td>{{ item.date }}</td>
             <td>{{ item.count }}</td>
           </tr>
         </ng-template>
