--- a/apps/client/src/app/Views/projects/project-details/project-details.component.html
+++ b/apps/client/src/app/Views/projects/project-details/project-details.component.html
@@ -11,9 +11,9 @@
           <p class="text-600 mt-1">{{ project()!.description || 'No description provided.' }}</p>
         </div>
         <div class="flex gap-2">
-          <p-button label="Edit Project" icon="pi pi-pencil" styleClass="p-button-outlined"
+          <p-button label="Edit Project" icon="pi pi-pencil" [outlined]="true"
                     (onClick)="editProject()"></p-button>
-          <p-button label="Back" icon="pi pi-arrow-left" styleClass="p-button-secondary p-button-text"
+          <p-button label="Back" icon="pi pi-arrow-left" severity="secondary" [text]="true"
                     (onClick)="goBack()"></p-button>
         </div>
       </div>
@@ -31,7 +31,7 @@
                       class="w-full"></textarea>
           </div>
           <div class="flex justify-content-end gap-2">
-            <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-text"
+            <p-button label="Cancel" icon="pi pi-times" [text]="true"
                       (onClick)="cancelEditProject()"></p-button>
             <p-button label="Save Changes" icon="pi pi-check" (onClick)="saveProject()"
                       [disabled]="projectForm.invalid" [loading]="loadingProject()"></p-button>
